добавил SVG картинки

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <p class="footer__text">Сделано руками {твое имя}</p>
         </div>
     </div>
+    <button class="button"></button>
 </body>
 
 </html>
