--- a/index.html
+++ b/index.html
@@ -22,39 +22,63 @@
         <ul class="gallery" id="gallery">
             <li class="gallery__item">
                 <img src="./images/1.png" class="image">
+                <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
+                <button class="button">  <img src="./images/Like.svg" alt="Like"></button>
             </li>
             <li class="gallery__item">
                 <img src="./images/2.png" class="image">
+                <button class="button">  <img src="./images/Like.svg" alt="Like"></button>
+                <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
             <li class="gallery__item">
                 <img src="./images/3.png" class="image">
+                <button class="button"> <img src="./images/Like.svg" alt="Like"></button>
+                <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
             <li class="gallery__item">
                 <img src="./images/4.png" class="image">
+                <button class="button"> <img src="./images/Like.svg" alt="Like"></button>  
+                <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
             <li class="gallery__item">
                 <img src="./images/5.png" class="image">
+                <button class="button"> <img src="./images/Like.svg" alt="Like"></button>
+                <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
             <li class="gallery__item">
                 <img src="./images/6.png" class="image">
+                <button class="button"> <img src="./images/Like.svg" alt="Like"></button>
+                <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
             <li class="gallery__item">
                 <img src="./images/7.png" class="image">
+                <button class="button"> <img src="./images/Like.svg" alt="Like"></button>
+                <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
             <li class="gallery__item">
                 <img src="./images/8.png" class="image">
+                <button class="button"> <img src="./images/Like.svg" alt="Like"></button>
+                <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
             <li class="gallery__item">
                 <img src="./images/9.png" class="image">
+                <button class="button"> <img src="./images/Like.svg" alt="Like"></button>
+                <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
             <li class="gallery__item">
                 <img src="./images/10.png" class="image">
+                <button class="button"> <img src="./images/Like.svg" alt="Like"></button>
+                <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
             <li class="gallery__item">
                 <img src="./images/11.png" class="image">
+                <button class="button"> <img src="./images/Like.svg" alt="Like"></button>
+                <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
             <li class="gallery__item">
                 <img src="./images/12.png" class="image">
+                <button class="button"> <img src="./images/Like.svg" alt="Like"></button>
+                <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
         </ul>
     </div>
@@ -63,7 +87,7 @@
             <p class="footer__text">Сделано руками {твое имя}</p>
         </div>
     </div>
-    <button class="button"></button>
+    
 </body>
 
 </html>
