Добавил текст на наведения картинок

--- a/index.html
+++ b/index.html
@@ -22,61 +22,75 @@
         <ul class="gallery" id="gallery">
             <li class="gallery__item">
                 <img src="./images/1.png" class="image">
-                <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
-                <button class="button">  <img src="./images/Like.svg" alt="Like"></button>
+                <p class="text">Самуправляемый паровоз, 330 г. до н.э.</p>
+                <button> <img class="button2" src="./images/Choosen.svg" alt="Choosen"> </button>
+                <button>  <img class="button" src="./images/Like.svg" alt="Like"></button>
             </li>
             <li class="gallery__item">
                 <img src="./images/2.png" class="image">
+                <p class="text">Девушка с цветами</p>
                 <button class="button">  <img src="./images/Like.svg" alt="Like"></button>
                 <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
             <li class="gallery__item">
                 <img src="./images/3.png" class="image">
+                <p class="text">Повелитель времени</p>
                 <button class="button"> <img src="./images/Like.svg" alt="Like"></button>
                 <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
             <li class="gallery__item">
                 <img src="./images/4.png" class="image">
+                <p class="text">Отец повелителя времени</p>
                 <button class="button"> <img src="./images/Like.svg" alt="Like"></button>  
                 <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
             <li class="gallery__item">
                 <img src="./images/5.png" class="image">
+                <p class="text">Настя, Алхимик, 96 лет</p>
                 <button class="button"> <img src="./images/Like.svg" alt="Like"></button>
                 <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
             <li class="gallery__item">
                 <img src="./images/6.png" class="image">
+                <p class="text">Циклопы и стены</p>
                 <button class="button"> <img src="./images/Like.svg" alt="Like"></button>
                 <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
             <li class="gallery__item">
                 <img src="./images/7.png" class="image">
+                <p class="text">Малтай</p>
                 <button class="button"> <img src="./images/Like.svg" alt="Like"></button>
                 <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
             <li class="gallery__item">
                 <img src="./images/8.png" class="image">
+                <p class="text">Великая циклопская революция</p>
                 <button class="button"> <img src="./images/Like.svg" alt="Like"></button>
                 <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
             <li class="gallery__item">
                 <img src="./images/9.png" class="image">
+                <p class="text">Просто женщина
+
+                </p>
                 <button class="button"> <img src="./images/Like.svg" alt="Like"></button>
                 <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
             <li class="gallery__item">
                 <img src="./images/10.png" class="image">
+                <p class="text">Первый испытатель джетпака</p>
                 <button class="button"> <img src="./images/Like.svg" alt="Like"></button>
                 <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
             <li class="gallery__item">
                 <img src="./images/11.png" class="image">
+                <p class="text">Леонард</p>
                 <button class="button"> <img src="./images/Like.svg" alt="Like"></button>
                 <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
             <li class="gallery__item">
                 <img src="./images/12.png" class="image">
+                <p class="text">Средневековье</p>
                 <button class="button"> <img src="./images/Like.svg" alt="Like"></button>
                 <button class="button2"> <img src="./images/Choosen.svg" alt="Choosen"> </button>
             </li>
@@ -84,7 +98,7 @@
     </div>
     <div class="footer">
         <div class="footer__overlay">
-            <p class="footer__text">Сделано руками {твое имя}</p>
+            <p class="footer__text">Сделано руками Кирилл</p>
         </div>
     </div>
     
